Update registrar tool docs